--- a/estacionamento/appsettings.json
+++ b/estacionamento/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=172.17.0.2;Port=3306;Database=estacionamento_dapper;Uid=root;Pwd=Est@cioneHavens;"
+  }
 }
